[package]
name = "expack"
version = "0.0.1"
authors = ["landcat222 <67131672+landcat222@users.noreply.github.com>"]
edition = "2018"
description = "Expack is wrapper for any packaging wrappers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
